log
Fri May 13 15:50:16 UTC 2022: 
 sudoku.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘is_final’:
sudoku.c:67:27: error: ‘o’ undeclared (first use in this function)
       if(n->sudo[i][j] == o){
                           ^
sudoku.c:67:27: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
1f11c0a
Fri May 13 15:50:30 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
20d8ed3
Fri May 13 15:52:36 UTC 2022: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
1ac2cfc
Fri May 13 15:53:19 UTC 2022: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
5c20d15
Fri May 13 15:53:46 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
be32f08
